<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_order_client" 
        android:textSize="20sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_order_customer" />

    <EditText
        android:id="@+id/add_order_ET_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_order_type_product" />

    <Spinner
        android:id="@+id/add_order_SPIN_typeProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_order_type_material" />

    <Spinner
        android:id="@+id/add_order_SPIN_typeMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_order_quantity" />

    <EditText
        android:id="@+id/add_order_ET_Quantity"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/add_order_BTN_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_order_client_validate" />

</LinearLayout>
