<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_login" />
    <EditText
        android:id="@+id/log_ET_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_pssword" />
    <EditText
        android:id="@+id/log_ET_pssword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10" >

    </EditText>

    <Button
        android:id="@+id/log_BTN_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_validatebtn" />
</LinearLayout>
