<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/operator"/>
       
	    <TextView
	        android:id="@+id/txtOperator"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="text1" />
    </LinearLayout>
     <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
         <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/zone"/>
         
	    <TextView 
	        android:id="@+id/txtZone"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:text="text"/>
    </LinearLayout>
     <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
         <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/date"/>
         
	    <TextView 
	        android:id="@+id/txtDate"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
            android:text="text2"/>
    </LinearLayout>
    
</LinearLayout>
