<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
	        android:id="@+id/txtTitleCustomer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/order_customer"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:id="@+id/txtCustomer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/txtTitleProcutType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_type_product"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/txtProductType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/txtTitleMaterialType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_type_material"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/txtMaterialType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/txtTitleQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_quantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         />
    </LinearLayout>

</LinearLayout>
