<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="8.5"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
             <TextView
	            android:id="@+id/txtTitleName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/order_type_product"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        <TextView
	            android:id="@+id/txtName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Nom" />
        </LinearLayout>
       
         <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView
                android:id="@+id/txtTitleEmplacement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emplacement"
                android:textAppearance="?android:attr/textAppearance" />
	        <TextView 
		        android:id="@+id/txtEmplacement"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="Status"/>
	     </LinearLayout>
    </LinearLayout>

     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
         android:orientation="vertical">

         <TextView
                android:id="@+id/txtTitleHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textAppearance="?android:attr/textAppearanceMedium" />
         
         <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>
   

</LinearLayout>
